fixes align card align issue on airdrop page

--- a/src/containers/More/Airdrop/index.scss
+++ b/src/containers/More/Airdrop/index.scss
@@ -24,14 +24,20 @@
 }
 
 .airdrop-upper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
+  // display: grid;
+  // grid-template-columns: repeat(3, 1fr);
+  // grid-gap: 1rem;
+  .col-xl-4{
+    @media screen and (max-width:1200px) {
+      padding-bottom: 20px;
+    }
+  }
   .airdrop-upper-card {
     border-radius: 20px;
     padding: 1.5rem;
     background: $assets-bg-light;
     box-shadow: $box-shadow-inner-light;
+    height: 100%;
     .dark-mode & {
       background: rgba($black, 0.4);
       border: 1px solid rgba(255, 255, 255, 0.2);
@@ -170,8 +176,12 @@
         border-radius: 10px;
         width: 100%;
         max-width: 400px;
-        height: 42px;
+        min-height: 42px;
+        padding: 0 8px;
+        line-height: 1.3;
         margin: 0.3rem auto auto auto;
+        white-space: break-spaces;
+        height: auto;
       }
     }
     &.airdrop-upper-card3 {
@@ -275,20 +285,26 @@
         max-width: 400px;
         height: 42px;
         margin: 1rem auto auto auto;
+        @media screen and (max-width:1500px) {
+          padding: 0 5px;
+          font-size: 13px;
+        }
       }
     }
   }
 }
 
 .airdrop-bottom {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1.5rem;
+  // display: grid;
+  // grid-template-columns: repeat(3, 1fr);
+  // grid-gap: 1.5rem;
   .airdrop-bottom-card {
     border-radius: 20px;
     padding: 1.5rem;
     background: $assets-bg-light;
     box-shadow: $box-shadow-inner-light;
+    width: 100%;
+    height: 100%;
     @media screen and (max-width: 1600px) {
       padding: 1rem 1.5rem;
     }
@@ -408,7 +424,15 @@
 .allChain-mission-btn-container {
   display: flex;
   column-gap: 10px;
+  @media screen and (max-width:480px) {
+    display: block;
+  }
   .mission-btn {
     background-color: $secondary-color !important;
+  }
+  .ant-btn{
+    @media screen and (max-width:480px) {
+      width: 100%;
+    }
   }
 }
